# embassy_playground

rust/generic/: flake.nix
rust/raspberry-pico/: flake.nix
rust/raspberry-pico/adc-test/: Cargo.toml
rust/raspberry-pico/adc-test/src/: main.rs
