[package]
name = "adc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

defmt = "=0.3.2"
defmt-rtt = "=0.3.2"
cortex-m = { version = "0.7.6" , features = ["inline-asm"]}
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version ="0.1.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] } #, git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0" , features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0" , features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "critical-section-impl"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "37181c79d9a0c6642d4b31bfb1d1816c9ee1b315" }

[profile.release]
debug = true